fix: corrected vertical overflow for mobile

--- a/app/features/work/experience/experience.module.css
+++ b/app/features/work/experience/experience.module.css
@@ -1,6 +1,7 @@
 section.container:not([hidden]) {
   display: grid;
   grid-template-rows: max-content max-content 1fr;
+  grid-template-columns: 100%;
   height: 100%;
   overflow-y: auto;
 }
@@ -44,6 +45,22 @@ span.title {
 span.location {
   grid-row: 2;
   grid-column: 1;
+}
+
+span.role {
+  @media (max-aspect-ratio: 1/1) {
+    font-size: 1.2rem;
+  }
+}
+
+a.company {
+  @media (max-aspect-ratio: 1/1) {
+    font-size: 1.2rem;
+  }
+}
+
+span.role::after {
+  content: " @ ";
 }
 
 span.time-range {
